# nefaxer

./: .mise.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  cspell.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: setup-openssl-windows.ps1
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs  common.rs
src/: index.rs  lib.rs  types.rs
src/disk_detect/: mod.rs
src/engine/: tools.rs
src/engine/db_ops/: connection.rs  indexer.rs
src/pipeline/: error_handler.rs  metadata.rs  mod.rs  orchestrator.rs  walk.rs
tests/: db_tests.rs  explicit_lib_tuning.rs
