[package]
name = "nefaxer"
version = "0.1.11"
edition = "2024"
rust-version = "1.95"
authors = ["AHurowitz <latkaindustries@gmail.com>"]
description = "High-performance directory indexer with content-aware diffing. Walks trees in parallel, stores metadata in SQLite, compares against a previous snapshot."
license = "MIT or Apache-2.0"
repository = "https://github.com/Latka-Industries/nefaxer"
homepage = "https://ublx.dev/nefaxer/"
documentation = "https://docs.rs/nefaxer"
readme = "README.md"
keywords = ["directory", "index", "diff", "sqlite", "change-detection"]
categories = [
  "command-line-utilities",
  "development-tools",
  "filesystem",
  "database",
  "caching",
]

[[bin]]
name = "nefaxer"
path = "src/main.rs"

[lib]
name = "nefaxer"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
crossbeam-channel = "0.5.14"
ctrlc = "3.5.2"
dotenvy = "0.15.7"
env_logger = "0.11.10"
ignore = "0.4.25"
jwalk = "0.8.1"
kdam = "0.6.4"
libc = "0.2.185"
log = "0.4.31"
memmap2 = "0.9.10"
rayon = "1.12.0"
rpassword = "7.5.2"
rusqlite = { version = "0.39.0", features = ["backup", "bundled-sqlcipher"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.39.0"
toml = "1.1.2"
walkdir = "2.5.0"

[dev-dependencies]
anyhow = "1.0.100"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
debug = false

[profile.release]
opt-level = "s"
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
debug = false
overflow-checks = false
